--- a/src/xsightassembler/view/LogView.fxml
+++ b/src/xsightassembler/view/LogView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.SplitPane?>
@@ -21,7 +22,7 @@
             <Label fx:id="stopLbl" layoutX="208.0" layoutY="12.0" prefHeight="20.0" text="Stop time" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
             <VBox fx:id="sliderBox" layoutX="54.0" layoutY="-48.0" maxHeight="50.0" minWidth="50.0" prefHeight="50.0" prefWidth="100.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0" />
             <TextField fx:id="selectedItemField" layoutX="14.0" layoutY="259.0" prefHeight="25.0" prefWidth="292.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="35.0" />
-            <HBox layoutX="70.0" layoutY="288.0" prefHeight="25.0" prefWidth="200.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+            <HBox layoutX="70.0" layoutY="288.0" prefHeight="25.0" prefWidth="200.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                <children>
                   <Button fx:id="upBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="50.0" text="Up">
                      <HBox.margin>
@@ -51,6 +52,11 @@
                </font>
             </Label>
             <Button layoutX="285.0" layoutY="273.0" mnemonicParsing="false" onAction="#clearSearchField" prefHeight="25.0" prefWidth="25.0" text="X" AnchorPane.bottomAnchor="100.0" AnchorPane.rightAnchor="5.0" />
+            <HBox layoutX="-9.0" layoutY="258.0" prefHeight="25.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
+               <children>
+                  <CheckBox fx:id="isIgnoreCase" mnemonicParsing="false" prefHeight="25.0" text="ignore case" />
+               </children>
+            </HBox>
          </children>
       </AnchorPane>
     <AnchorPane minHeight="200.0" minWidth="250.0" prefHeight="398.0" prefWidth="250.0">
