--- a/src/xsightassembler/view/LogView.fxml
+++ b/src/xsightassembler/view/LogView.fxml
@@ -17,10 +17,10 @@
   <items>
     <AnchorPane minHeight="200.0" minWidth="250.0" prefWidth="250.0">
          <children>
-            <TreeView fx:id="logTree" layoutY="14.0" prefHeight="300.0" prefWidth="200.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0" />
+            <TreeView fx:id="logTree" layoutY="14.0" prefHeight="300.0" prefWidth="200.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="95.0" />
             <Label fx:id="startLbl" layoutX="14.0" layoutY="6.0" prefHeight="20.0" text="Start time" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
             <Label fx:id="stopLbl" layoutX="208.0" layoutY="12.0" prefHeight="20.0" text="Stop time" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
-            <VBox fx:id="sliderBox" layoutX="54.0" layoutY="-48.0" maxHeight="50.0" minWidth="50.0" prefHeight="50.0" prefWidth="100.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0" />
+            <VBox fx:id="sliderBox" layoutX="54.0" layoutY="-48.0" maxHeight="50.0" minWidth="50.0" prefHeight="50.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0" />
             <TextField fx:id="selectedItemField" layoutX="14.0" layoutY="259.0" prefHeight="25.0" prefWidth="292.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="35.0" />
             <HBox layoutX="70.0" layoutY="288.0" prefHeight="25.0" prefWidth="200.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0">
                <children>
