--- a/src/xsightassembler/view/AllInOneAssemblerView.fxml
+++ b/src/xsightassembler/view/AllInOneAssemblerView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8.0.281" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xsightassembler.view.AllInOneAssemblerController">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xsightassembler.view.AllInOneAssemblerController">
    <children>
       <TitledPane fx:id="isduhPane" layoutX="14.0" layoutY="14.0" prefHeight="276.0" prefWidth="285.0" text="ISDUH system" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
@@ -58,7 +58,7 @@
                                 </rowConstraints>
                                  <children>
                                     <Label prefHeight="25.0" text="SN:" />
-                                    <TextField fx:id="upperModuleSn" prefWidth="125.0" GridPane.columnIndex="1" />
+                                    <TextField fx:id="upperSensorModuleSn" prefWidth="125.0" GridPane.columnIndex="1" />
                                     <Label fx:id="coolerLbl" prefHeight="25.0" text="Cooler:" GridPane.columnIndex="2">
                                        <GridPane.margin>
                                           <Insets left="15.0" />
@@ -194,5 +194,6 @@
          </content>
       </TitledPane>
       <Button fx:id="saveBtn" layoutX="420.0" layoutY="561.0" mnemonicParsing="false" prefWidth="100.0" text="Save" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      <Button fx:id="historyBtn" layoutX="38.0" layoutY="565.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="History" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" />
    </children>
 </AnchorPane>
