--- a/src/xsightassembler/view/AssemblyJournalView.fxml
+++ b/src/xsightassembler/view/AssemblyJournalView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainPane" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.271" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xsightassembler.view.AssemblyJournalController">
+<AnchorPane fx:id="mainPane" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xsightassembler.view.AssemblyJournalController">
    <children>
       <TableView fx:id="tIsduh" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
       <HBox prefHeight="50.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
@@ -44,6 +44,14 @@
                <HBox.margin>
                   <Insets left="10.0" top="14.0" />
                </HBox.margin>
+            </Button>
+            <Button fx:id="addToPalletBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="+">
+               <HBox.margin>
+                  <Insets left="10.0" top="14.0" />
+               </HBox.margin>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
             </Button>
          </children>
       </HBox>
